Добавляет компонент App и кнопку «Налоговый вычет»

--- a/src/index.css
+++ b/src/index.css
@@ -35,4 +35,6 @@ html {
 body {
   font-family: "Lab Grotesque", "Helvetica", "Arial", sans-serif;
   font-weight: normal;
+
+  min-width: 320px;
 }
