--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -8,6 +8,10 @@
   box-shadow: 0 -0.11px 16.9495px rgba(183, 187, 225, 0.33);
 }
 
+.outside-digital-app--open {
+  background: #FFFFFF;
+}
+
 .tax-deduction-button {
   color: #FFFFFF;
   font-size: 12px;
