--- a/src/components/popup/popup.css
+++ b/src/components/popup/popup.css
@@ -1,6 +1,18 @@
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
 .popup {
   position: absolute;
-  z-index: 10;
+  z-index: 20;
 
   height: 100vh;
   width: 100%;
@@ -15,7 +27,7 @@
   position: absolute;
   top: 22px;
   right: 22px;
-  z-index: 20;
+  z-index: 30;
 
   font-size: 0;
 
@@ -25,4 +37,35 @@
   border: 0;
 
   cursor: pointer;
+}
+
+.popup-close:hover,
+.popup-close:focus {
+  filter: drop-shadow(0 0 24px rgba(234, 0, 41, 0.33));
+  outline: none;
+}
+
+.popup-close:disabled path {
+  fill: #BEC5CC;
+  filter: none;
+}
+
+@media (min-width: 768px) {
+  .popup {
+    width: 453px;
+    height: 100px;
+
+    border-radius: 30px;
+  }
+
+  .popup-close {
+    top: 27px;
+    right: 23px;
+  }
+}
+
+@media (min-width: 1440px) {
+  .popup {
+    width: 552px
+  }
 }
