--- a/src/components/popup/popup.css
+++ b/src/components/popup/popup.css
@@ -84,6 +84,8 @@
 .input-data-label {
   position: relative;
 
+  display: block;
+
   font-size: 14px;
   line-height: 24px;
   font-weight: 500;
@@ -127,7 +129,7 @@
   content: "Поле обязательно для заполнения";
 
   position: absolute;
-  bottom: -5px;
+  bottom: -14px;
 
   color: #EA0029;
   font-size: 10px;
